platform-engineering/base/llama318b/llama318b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama318b
  namespace: sasya-chikitsa
  labels:
    app: llama318b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama318b
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app: llama318b
    spec:
      containers:
        - name: ollama318b
          image: quay.io/rajivranjan/ollama-model-llama318b-amd64:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 11434
              protocol: TCP
          resources:
            requests:
              memory: "20Gi"
              cpu: "6"
            limits:
              memory: "24Gi"
              cpu: "8"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: ollama-data-volume
              mountPath: /ollama-data
      volumes:
        - name: ollama-data-volume
          persistentVolumeClaim:
            claimName: ollama-data-pvc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
