platform-engineering/base/llama318b/llama318b-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: llama318b
  name: llama318b
  namespace: sasya-chikitsa
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 11434-tcp
    port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: llama318b
    deployment: llama318b
  sessionAffinity: None
  type: ClusterIP
