platform-engineering/base/llama318b/llama318b-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: llama318b
  name: llama318b
  namespace: sasya-chikitsa
spec:
  # host: engine-sasya-chikitsa.apps.cluster-mx6z7.mx6z7.sandbox5315.opentlc.com
  port:
    targetPort: 11434-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: llama318b
    weight: 100
  wildcardPolicy: None
